data/derived/sp14/progs/unify/prog2906.ml.out
Characters 13-17:
  let sample = VarX ^ "y";;
               ^^^^
Error: This expression has type expr but an expression was expected of type
         string
